update invite git

--- a/src/app/invite/invite.component.html
+++ b/src/app/invite/invite.component.html
@@ -17,7 +17,7 @@
        
     </div>
 
-    <img  *ngIf="show_invite" src="assets/invite1.gif"  class="invite"/>
+    <img  *ngIf="show_invite" src="assets/invite.gif"  class="invite"/>
     
 
 
