--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -22,7 +22,7 @@
    
    <div fxFlex fxLayout="row"  fxLayout.xs="column">
     <!--<img  fxFlex class="cal" src="assets/april_14.png"/>-->
-    <app-countdown fxFlex="30"></app-countdown>
+    <app-countdown class="countdown" fxFlex="30"></app-countdown>
     <div fxFlex [innerHTML]="date">
 
     </div>
@@ -59,7 +59,7 @@
     <div fxFlex="90" [innerHTML]="story">
 
     </div>
-    <img  fxFlex class="book" src="assets/love_story.png"/>
+    <img  fxFlex class="book" src="assets/book_cover.png"/>
 
    </div>
 
