--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,38 @@
-<div class="all">
 
-    <div class="info" fxLayout="column">
+
+
+
+<div class="small" *ngIf="media.isActive('xs') || media.isActive('sm')">
+
+    <div class="info_l" fxLayout="column" >
+        <div fxFlex class="title">
+            We've waited 4,063 days for this.
+        <br/>
+            Party <br/>accordingly.
+        </div>
+        <br/><br/>
+
+        <div fxFlex class="where_l">
+               <b>When:</b>
+                <br/>
+            Sunday April 14, 2024
+        </div>
+
+        <div fxFlex class="where_l">
+            <b>Where:</b> <br/>
+            Fox Meadow Barn<br/>
+            350 Old Firehouse Ln<br/>
+            Winchester, VA 22602
+        </div>
+
+    </div>
+    
+  </div>
+
+
+<div class="all" *ngIf="media.isActive('md') || media.isActive('lg') || media.isActive('xl')">
+
+    <div class="info" fxLayout="column" >
         <div fxFlex class="title">
             We've waited 4,063 days for this.
         <br/>
@@ -8,14 +40,9 @@
         </div>
 
         <div fxFlex class="where">
-
-               <b>
-                When:
-               </b>
+               <b>When:</b>
                 <br/>
             Sunday April 14, 2024
-
-            
         </div>
 
         <div fxFlex class="where">
