--- a/src/app/ourstory/ourstory.component.html
+++ b/src/app/ourstory/ourstory.component.html
@@ -4,9 +4,7 @@
     <div class="containerx">
         <div class="flip-book" id="demoBookExample">
             <div class="page page-cover page-cover-top" data-density="hard">
-                <div class="page-content">
-                    <h2>Jacqui and Peter: <br/>Our Unintentionally Epic Journey Together</h2>
-                </div>
+
             </div>
             <div *ngFor="let page of pagesList" class="page">
                 <div class="page-content">
@@ -18,8 +16,8 @@
             </div>
 
             <div class="page page-cover page-cover-bottom" data-density="hard">
-                <div class="page-content">
-                    <h2>ITS JUST STARTING...</h2>
+                <div class="page-content back-content">
+                    <h2>THE BEGINNING...</h2>
                 </div>
             </div>
         </div>
