--- a/src/app/invite/invite.component.scss
+++ b/src/app/invite/invite.component.scss
@@ -13,6 +13,16 @@
     background-size: cover; 
   }
 
+.message {
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  font-family: cursive;
+}
 
   .envelope {
     height: 50%;
@@ -68,6 +78,7 @@
     width: 80%;
     position: absolute;
     left: 10%;
+    display: none;
     top: 10%;
     z-index:10;
   }
