--- a/src/app/ourstory/ourstory.component.scss
+++ b/src/app/ourstory/ourstory.component.scss
@@ -108,14 +108,14 @@ overflow: scroll;
       background-color: hsl(35, 50, 90);
     }
 
-    &.page-cover-top {
+    &.page-cover-topx {
       background-image: url("../../assets/book_cover.png");
       background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover; 
     }
 
-    &.page-cover-bottom {
+    &.page-cover-bottomx {
       background-image: url("../../assets/blue_back.png");
       background-position: center; 
     background-repeat: no-repeat; 
