--- a/src/app/countdown/countdown.component.scss
+++ b/src/app/countdown/countdown.component.scss
@@ -1,10 +1,10 @@
 .timer {
-    background-image: url("../../assets/wood_sign.png");
+    //background-image: url("../../assets/blue_boards.png");
       background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover;
     text-align: center; 
     height: 100%;
     width: 100%;
-    position: absolute;
+    position: relative;
 }
