--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -109,7 +109,7 @@ overflow: scroll;
   }
 
   &.page-cover-top {
-    background-image: url("../../assets/b_c.jpeg");
+    background-image: url("../../assets/b_c.png");
     background-position: center; 
   background-repeat: no-repeat; 
   background-size: cover; 
