--- a/src/app/ourstory/ourstory.component.html
+++ b/src/app/ourstory/ourstory.component.html
@@ -4,7 +4,7 @@
     <div class="containerx">
         <div class="flip-book" id="demoBookExample">
             <div class="page page-cover page-cover-topx" data-density="hard">
-
+                <img src="assets/cptr.png" class="cptr"/>
             </div>
             <div *ngFor="let page of pagesList" class="page">
                 <div class="page-content">
