--- a/src/app/ourstory/ourstory.component.scss
+++ b/src/app/ourstory/ourstory.component.scss
@@ -155,3 +155,11 @@ overflow: scroll;
   text-align: center;
   padding-top: 40%;
   }
+
+  .cptr {
+    top:0px;
+    right: 5px;
+    height: 150px;
+    width: 100px;
+    position: absolute;
+  }
