--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,10 +5,10 @@
 <div class="small" *ngIf="media.isActive('xs')">
 
     <div class="info_l" fxLayout="column" >
-        <div fxFlex class="title">
+        <div fxFlex class="title_l">
             We've waited 4,063 days for this.
         <br/>
-            Party <br/>accordingly.
+            Party accordingly.
         </div>
         <br/><br/>
 
@@ -23,6 +23,12 @@
             Fox Meadow Barn<br/>
             350 Old Firehouse Ln<br/>
             Winchester, VA 22602
+        </div>
+
+        <br/><br/>
+
+        <div fxFlex class="where_l">
+            <b>Click the menu button (<mat-icon>menu</mat-icon>) on the top left to explore the site!</b> 
         </div>
 
     </div>
@@ -50,6 +56,10 @@
             Fox Meadow Barn<br/>
             350 Old Firehouse Ln<br/>
             Winchester, VA 22602
+        </div>
+
+        <div fxFlex class="where">
+            <b>Click the menu button (<mat-icon>menu</mat-icon>) to explore the site!</b> 
         </div>
 
     </div>
