--- a/src/app/invite/invite.component.scss
+++ b/src/app/invite/invite.component.scss
@@ -33,11 +33,18 @@
   }
 
   .img {
+    text-align: center;
     height: 100%;
     width: 100%;
     position:absolute;
-    box-shadow: 10px 10px 8px 0 rgba(0, 0, 0, 0.2), 20px 20px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 15px;
+    transform: rotateY(45deg);
+    box-shadow: 15px 15px 8px 0 rgba(0, 0, 0, 0.2), 20px 20px 20px 0 rgba(0, 0, 0, 0.19);
 
+  }
+
+  .img:hover {
+    //transform: scale(1.01) rotateY(45deg); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
 
 
@@ -45,6 +52,10 @@
     position: absolute;
     top:50%;
     left: 20%;
+  }
+
+  .envelope:hover {
+    transform: scale(1.01) ; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
 
   .hint {
@@ -61,6 +72,8 @@
     top: 70%;
     left: 50%;
   }
+
+
 
 
 .cover {
