--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -4,6 +4,7 @@
    <div class="containerx">
        <div class="flip-book" id="demoBookExample">
            <div class="page page-cover page-cover-top" data-density="hard">
+            <img src="assets/cptr.png" class="cptr"/>
 
            </div>
            <div *ngFor="let page of pagesList" class="page">
@@ -21,7 +22,8 @@
 
            <div class="page page-cover page-cover-bottom" data-density="hard">
                <div class="page-content back-content">
-                   <h2>ENJOY!</h2>
+                   <h2>HAVE FUN!</h2>
+
                </div>
            </div>
        </div>
