--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
                 <mat-icon>help</mat-icon><span>Help</span>
             </button>
             <mat-divider></mat-divider>
-            <button mat-menu-item routerLink="#">
+            <button mat-menu-item (click)="signOut()">
                 <mat-icon>exit_to_app</mat-icon>Logout
             </button>
         </mat-menu>
@@ -103,7 +103,7 @@
   
     <!-- Render sign-in screen otherwise with authenticator -->
     <ng-container *ngIf="authenticator.authStatus !== 'authenticated'">
-      <amplify-authenticator>
+      <amplify-authenticator [hideSignUp]="true">
           <ng-template
                 amplifySlot="authenticated"
                 let-user="user"
