can ask a question

--- a/src/app/faq/faq.component.scss
+++ b/src/app/faq/faq.component.scss
@@ -14,3 +14,10 @@
     background-repeat: no-repeat; 
     background-size: cover; 
   }
+
+
+  .ask {
+    position: absolute;
+    right: 5px;
+    bottom: 10px;
+  }
