--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,4 +1,12 @@
-<p>rsvp works!</p>
+<div class="all">
+RSVPV
 
+<div> Your curent RSVP status: {{rsvp_status}}</div>
 
-Favorite Color: <input type="text" [formControl]="favoriteColorControl" />
+<button (click)="yes()">Yes, We are coming!</button>
+
+<button (click)="no()">Regrets</button>
+
+<button>Tentative</button>
+
+</div>
