--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -6,4 +6,18 @@
     <p>{{faqItem.answer}}</p>
   </mat-expansion-panel>
 </mat-accordion>
+
+<mat-divider></mat-divider>
+
+<h2>Pending Response:</h2>
+
+<mat-accordion displayMode="default" multi="true"
+               class="faq-container">
+  <mat-expansion-panel *ngFor="let faqItem of faqListPending">
+    <mat-expansion-panel-header>{{faqItem.question}}</mat-expansion-panel-header>
+    <p>{{faqItem.answer}}</p>
+  </mat-expansion-panel>
+</mat-accordion>
+
 </div>
+<button mat-raised-button class="ask" color="primary" (click)="ask()">Ask Question</button>
