--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -55,7 +55,7 @@
 <br/>
 <br/>
 
-
+<h3>Change Password</h3>
 <form [formGroup]="changePasswordForm" (ngSubmit)="changePassword()">
   <mat-form-field>
     <mat-label>Old Password</mat-label>
