--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,23 +1,32 @@
 <div class="all">
-<mat-accordion displayMode="default" multi="true"
-               class="faq-container">
-  <mat-expansion-panel *ngFor="let faqItem of faqList">
+<div *ngFor="let group of groupKeys">
+  <h2>{{group}}</h2>
+  <mat-accordion displayMode="default" multi="true"
+  class="faq-container">
+    <mat-expansion-panel *ngFor="let faqItem of questionGroups[group]">
     <mat-expansion-panel-header>{{faqItem.question}}</mat-expansion-panel-header>
-    <p>{{faqItem.answer}}</p>
-  </mat-expansion-panel>
-</mat-accordion>
+    <div [innerHTML]="faqItem.answer"></div>
+    </mat-expansion-panel>
+  </mat-accordion>
+</div>
 
+
+<div *ngIf="showPending">
+  <br/>
+  <br/>
+  <h2>Pending Response:</h2>
+
+  <mat-accordion displayMode="default" multi="true"
+                class="faq-container">
+    <mat-expansion-panel *ngFor="let faqItem of faqListPending">
+      <mat-expansion-panel-header>{{faqItem.question}}</mat-expansion-panel-header>
+      <p>Bridal party is compiling a response...</p>
+    </mat-expansion-panel>
+  </mat-accordion>
+
+</div>
 <mat-divider></mat-divider>
 
-<h2>Pending Response:</h2>
-
-<mat-accordion displayMode="default" multi="true"
-               class="faq-container">
-  <mat-expansion-panel *ngFor="let faqItem of faqListPending">
-    <mat-expansion-panel-header>{{faqItem.question}}</mat-expansion-panel-header>
-    <p>{{faqItem.answer}}</p>
-  </mat-expansion-panel>
-</mat-accordion>
 
 </div>
 <button mat-raised-button class="ask" color="primary" (click)="ask()">Ask Question</button>
