--- a/src/app/rsvp/rsvp.component.scss
+++ b/src/app/rsvp/rsvp.component.scss
@@ -12,3 +12,18 @@
     background-repeat: no-repeat; 
     background-size: cover; 
   }
+
+.buttons {
+  margin:auto;
+  text-align: center;
+}
+
+
+.rsvp {
+  width: 80%;
+  max-width: 500px;
+  height: 100px;
+  margin: 10px;
+  font-size: larger;
+
+}
