--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -4,7 +4,7 @@
 <div class="box">
 
 
-<h1>{{I18n.get('Welcome')}} {{userService.userSettings.user}}</h1>
+<h1>{{I18n.get('Welcome')}} {{userService.userInfo.display_name}}</h1>
 
 
 <!--
