--- a/src/app/invite/invite.component.scss
+++ b/src/app/invite/invite.component.scss
@@ -14,7 +14,7 @@
   }
 
 .message {
-  height: 100%;
+  height: 50%;
   width: 100%;
   overflow: scroll;
   padding-left: 10%;
@@ -25,11 +25,11 @@
 }
 
   .envelope {
-    height: 50%;
+    height: 40%;
     width: 75%;
     left: 14%;
     bottom: 30px;
-    position: relative;
+    position: absolute;
   }
 
   .img {
