--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,6 +61,8 @@
 
 
 
-
+    <button mat-raised-button class="rsvp" color="transparent" routerLink="/rsvp">
+        RSVP
+      </button>
 
 </div>
