--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -65,6 +65,12 @@ mat-icon {
     padding-left: 40%;
 }
 
+.rsvp {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: xx-large;
+}
 
 .where_l {
     text-align: left;
