--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,10 @@
         <span>{{I18n.get('Jacqui & Peter Wedding')}}</span>
         <span class="toolbar-item-spacer"></span>
 
+        <button mat-stroked-button class="rsvp" color="transparent" routerLink="/rsvp">
+          RSVP
+        </button>
+
         <!--
         <button mat-icon-button matTooltip="Notifications">
             <mat-icon>notifications</mat-icon>
