--- a/src/app/rsvp-yes/rsvp-yes.component.html
+++ b/src/app/rsvp-yes/rsvp-yes.component.html
@@ -2,6 +2,9 @@
 <div class="all">
 
     <p>We are so glad you are able to join us and look forward to seeing you there!
+        <br/>
+        Please make sure and include all people in your party in the form below.
+        <br/>
         Having your answer by March 1, 2024 will help us ensure a smooth and fun event for everyone.
 </p>
 
